// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power Fx Functions [CountIf error1] =CountIf(#57622108-1337-4edd-833a-2557835bcfe0."MySpreadsheet", >= 3) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "id",
        "value": "28e28190-63bd-4f70-aeca-26e72574c01a",
      },
      "id": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "kind": "Spreadsheet",
      "name": "MySpreadsheet",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "hide": false,
    "type": "Spreadsheet",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
]
`;

exports[`Power Fx Functions [CountIf ok] =CountIf(#57622108-1337-4edd-833a-2557835bcfe0."MySpreadsheet", #57622108-1337-4edd-833a-2557835bcfe0."MySpreadsheet"."first" >= 3) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "id",
        "value": "28e28190-63bd-4f70-aeca-26e72574c01a",
      },
      "id": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "kind": "Spreadsheet",
      "name": "MySpreadsheet",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "hide": false,
    "type": "Spreadsheet",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "id",
        "value": "28e28190-63bd-4f70-aeca-26e72574c01a",
      },
      "id": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "kind": "Spreadsheet",
      "name": "MySpreadsheet",
      "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
    },
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "Spreadsheet",
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "any",
  },
  Object {
    "attrs": Object {
      "findKey": Object {
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        "type": "name",
        "value": "first",
      },
      "id": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
      "kind": "Column",
      "name": "first",
      "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    },
    "code": "Column",
    "display": "first",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "Column",
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
  },
]
`;
